<resources>
    <string name="app_name">樂天點數紀錄器</string>
    <string name="expenditure">訂單金額</string>
    <string name="acc_switch">切換帳號</string>
    <string name="edit">修改</string>
    <string name="ID">ID</string>
    <string name="date">日期</string>
    <string name="memo">備註</string>
    <string name="activity_name">活動名稱</string>
    <string name="activity_start">活動區間</string>
    <string name="activity_end">活動結束日期</string>
    <string name="ratio">回饋倍數</string>
    <string name="feedback_start">回饋區間</string>
    <string name="feedback_end">回饋結束日期</string>
    <string name="plz_date">請輸入日期</string>
    <string name="act_list">活動列表</string>
    <string name="act_list_feedback_ratio">回饋倍數</string>
    <string name="act_list_feedback_limited">回饋上限</string>
    <string name="act_list_feedback_now">目前回饋</string>
    <string name="delete">刪除</string>
    <string name="back">返回</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
