<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_1"

    android:clipToPadding="false"
    android:padding="5dp">

    <TextView
        android:id="@+id/AdapterActList_Name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="10dp"

        android:text="@string/activity_name"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AdapterActList_F_L"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="10dp"

        android:text="@string/act_list_feedback_limited"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        app:layout_constraintStart_toEndOf="@+id/AdapterActList_Name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AdapterActList_F_N"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="15dp"

        android:text="@string/act_list_feedback_now"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>